<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv_me_two"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_below="@id/cv_me_one"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:background="@color/md_white_1000"
    android:elevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/rl_life_recommend_robot">

            <ImageView
                android:id="@+id/iv_robot"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@mipmap/icon_robot"/>

            <TextView
                android:id="@+id/tv_robot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_robot"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:textColor="@color/md_grey_700"
                android:textSize="15sp"
                android:text="@string/text_robot_content_life"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/md_grey_500"
                android:textSize="14sp"
                android:text="@string/text_robot_name_life"/>


        </RelativeLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/md_grey_300" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rl_life_recommend_laugh">

                    <ImageView
                        android:id="@+id/iv_laugh"
                        android:layout_width="24dp"
                        android:layout_height="32dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:src="@mipmap/icon_laugh" />

                    <TextView
                        android:id="@+id/tv_laugh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_laugh"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp"
                        android:text="@string/text_joke_life"/>

                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/md_grey_300" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rl_life_recommend_cookbook">

                    <ImageView
                        android:id="@+id/iv_cookbook"
                        android:layout_width="24dp"
                        android:layout_height="32dp"
                        android:layout_centerHorizontal="true"
                        android:src="@mipmap/icon_cookbook"
                        android:layout_marginTop="8dp" />

                    <TextView
                        android:id="@+id/tv_cookbook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_cookbook"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp"
                        android:text="@string/text_cookbook_life"/>

                </RelativeLayout>

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/md_grey_300" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rl_life_recommend_position">

                    <ImageView
                        android:id="@+id/iv_position"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:src="@mipmap/icon_position" />

                    <TextView
                        android:id="@+id/tv_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_position"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp"
                        android:text="@string/text_position_life"/>

                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/md_grey_300" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/rl_life_recommend_message">

                    <ImageView
                        android:id="@+id/iv_message"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="8dp"
                        android:src="@mipmap/icon_message" />

                    <TextView
                        android:id="@+id/tv_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_message"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:textColor="@color/md_grey_700"
                        android:textSize="12sp"
                        android:text="@string/text_message_life"/>

                </RelativeLayout>


            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


</android.support.v7.widget.CardView>